entered players names, test passed

--- a/views/form.erb
+++ b/views/form.erb
@@ -1,5 +1,5 @@
 <form action = '/players' method = 'post'>
-  <input type = 'text' p1 = 'name'>
-  <input type = 'text' p2 = 'name'>
+  <input type = 'text' name = 'p1'>
+  <input type = 'text' name = 'p2'>
   <input type = 'submit' value = 'Submit'>
 </form>
