--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
-<h2>Battle</h2>
-
-<h1>Player 1: <%=@p1%></h1>
-<h1>Player 2: <%=@p2%></h1>
+<form action = '/names' method = 'post'>
+  <input type = 'text' name = 'p1'>
+  <input type = 'text' name = 'p2'>
+  <input type = 'submit' value = 'Submit'>
+</form>
