created 1st attack

--- a/views/play.erb
+++ b/views/play.erb
@@ -4,3 +4,8 @@
 <h1>
   Player 2: <%=@p2%> HP 60
 </h1>
+
+
+<form action = '/first_attack' method = 'get'>
+  <input type = 'submit' value = 'Attack'>
+</form>
