added ok button

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -3,5 +3,9 @@
 </h1>
 
 <h2>
-  <%=@p2 %>'s hitpoints <em class="hitpoints"><%= @hp %></em>
+  <%=@p2 %>'s HP <%=@p2_hp%></em>
 </h2>
+
+<form action ='/play'>
+  <input type = "submit" value = "OK">
+</form>
