--- a/views/play.erb
+++ b/views/play.erb
@@ -1,9 +1,9 @@
-<h2>Battle</h2>
+<h1>Battle</h1>
 
-<h1>Player 1: <%=@p1%></h1>
-<h1>
-  Player 2: <%=@p2%> HP 60
-</h1>
+<h2>Player 1: <%=@p1%></h2>
+<h2>
+  Player 2: <%=@p2%> HP <%=@p2_hp%>
+</h2>
 
 
 <form action = '/first_attack' method = 'get'>
